--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
+#\uB370\uC774\uD130\uC18C\uC2A4 \uC124\uC815
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/homepage?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=ekrjal1591346~!
 
+#JPA\uC124\uC815
 spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=none
@@ -10,14 +12,32 @@ logging.level.org.hibernate.SQL=DEBUG
 
 spring.mvc.hiddenmethod.filter.enabled=true
 
+#\uC138\uC158 \uC2DC\uAC04 \uC124\uC815
 server.servlet.session.timeout=60m
 
+#\uD0C0\uC784\uB9AC\uD504 \uCE90\uC2DC \uC81C\uAC70
 spring.thymeleaf.cache=false
 
+#\uC2A4\uD504\uB9C1 \uC2DC\uD050\uB9AC\uD2F0
 logging.level.org.springframework.security=DEBUG
 
+#JPA\uB124\uC774\uBC0D \uC124\uC815
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
+#\uBCC0\uC218 \uC124\uC815
 file.upload.directory=src/main/resources/static
+
+#Gmail \uC124\uC815
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=dsyjhp@gmail.com
+spring.mail.password=vtad xuvw ucyt zbhe
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.stattls.enable=true
+spring.mail.properties.mail.smtp.stattls.required=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.properties.auth-code-expiration-millis=180000
 
