--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,10 +34,14 @@ spring.mail.port=587
 spring.mail.username=dsyjhp@gmail.com
 spring.mail.password=vtad xuvw ucyt zbhe
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.stattls.enable=true
-spring.mail.properties.mail.smtp.stattls.required=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 spring.mail.properties.auth-code-expiration-millis=180000
+
+#Redis \uC124\uC815
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
 
