--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,6 +42,6 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 spring.mail.properties.auth-code-expiration-millis=180000
 
 #Redis \uC124\uC815
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
+spring.data.redis.mail.host=localhost
+spring.data.redis.mail.port=6379
 
